...
    @State private var editMode: EditMode = .inactive
    
    var body: some View {
        ZStack {
            VStack(spacing: 0) {
                Spacer().frame(height: 16)
                Text("Your Signatures")
                    .font(forCategory: .body1)
                    .foregroundColor(ColorPalette.signatureInk)
                Spacer().frame(height: 16)
                self.content
                Spacer().frame(height: 16)
                self.addNewButton
...
    }
    
    var addNewButton: some View {
        HStack(spacing: 0) {
            Spacer()
            Button(action: { self.viewModel.createNewSignature() }) {
                Label("Add new signature", systemImage: "plus.circle.fill")
                    .font(forCategory: .body1)
                    .foregroundColor(ColorPalette.buttonGradientStart)
            }
        }
        .frame(maxWidth: .infinity)
        .frame(height: 48)
...
